# TinyFrame

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TF_Config.example.h  TF_Config.example.hpp  TF_Config.hpp  TF_Integration.example.c  TF_Integration.example.cpp  TinyFrame.c  TinyFrame.cpp  TinyFrame.h  TinyFrame.hpp  TinyFrame_CRC.cpp  TinyFrame_CRC.hpp  TinyFrame_Types.hpp  test.c
demo/: demo.c  demo.cpp  demo.h  demo.hpp  utils.c  utils.cpp  utils.h  utils.hpp
demo/hello/: TF_Config.h  master.c  slave.c
demo/multipart_tx/: Makefile  TF_Config.h  test.c
demo/simple/: Makefile  TF_Config.h  TF_Config.hpp  test.c  test.cpp
demo/simple_custom_cksum/: Makefile  TF_Config.h  test.c  test.cpp
demo/simple_long_payload/: Makefile  test.c  test.cpp
demo/simple_multipart/: TF_Config.h  test.c  test.cpp
demo/socket_demo/: Makefile  TF_Config.h  master.c  master.cpp  slave.c  slave.cpp
demo/test/: TF_Config.h  test.c
tests/: TF_SimpleTest.c  TF_SimpleTest.cpp
utilities/: payload_builder.c  payload_builder.h  payload_parser.c  payload_parser.h  type_coerce.h
